samples/_failures_safe/1761456123_c18897_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb3cde98.c:157: error: expected ‘;’, ‘,’ or ‘)’ at end of input
